Updated: crud Users

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,10 +6,13 @@
   {% block stylesheets %}
     {{ encore_entry_link_tags('app') }}
   {% endblock %}
+  <title>
+  {% block title %}
+  {% endblock %}
+  </title>
 </head>
 <body>
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
+  {% block body %}
+  {% endblock %}
 </body>
 </html>
