--- a/templates/usuario/index.html.twig
+++ b/templates/usuario/index.html.twig
@@ -3,39 +3,42 @@
 {% block title %}Usuario index{% endblock %}
 
 {% block body %}
-    <h1>Usuario index</h1>
+    <div class="container mx-auto mt-8">
+    <h1 class="text-2xl font-bold mb-4">Usuarios</h1>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Nombres</th>
-                <th>Apellidos</th>
-                <th>Password</th>
-                <th>Email</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for usuario in usuarios %}
-            <tr>
-                <td>{{ usuario.id }}</td>
-                <td>{{ usuario.nombres }}</td>
-                <td>{{ usuario.apellidos }}</td>
-                <td>{{ usuario.password }}</td>
-                <td>{{ usuario.email }}</td>
-                <td>
-                    <a href="{{ path('app_usuario_show', {'id': usuario.id}) }}">show</a>
-                    <a href="{{ path('app_usuario_edit', {'id': usuario.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="6">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+    <div class="overflow-x-auto">
+        <table class="table-auto w-full border-collapse">
+            <thead>
+                <tr class="bg-gray-600 text-white">
+                    <th class="border p-2">Nombres</th>
+                    <th class="border p-2">Apellidos</th>
+                    <th class="border p-2">Password</th>
+                    <th class="border p-2">Email</th>
+                    <th class="border p-2">Acciones</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for usuario in usuarios %}
+                    <tr>
+                        <td class="border p-2">{{ usuario.nombres }}</td>
+                        <td class="border p-2">{{ usuario.apellidos }}</td>
+                        <td class="border p-2">{{ usuario.password }}</td>
+                        <td class="border p-2">{{ usuario.email }}</td>
+                        <td class="border p-2">
+                            <a href="{{ path('app_usuario_show', {'id': usuario.id}) }}" class="inline-block bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Show</a>
+                            <a href="{{ path('app_usuario_edit', {'id': usuario.id}) }}" class="inline-block bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded ml-2">Edit</a>
+                        </td>
+                    </tr>
+                {% else %}
+                    <tr>
+                        <td class="border p-2" colspan="6">No se encontraron registros</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 
-    <a href="{{ path('app_usuario_new') }}">Create new</a>
+    <a href="{{ path('app_usuario_new') }}" class="inline-block mt-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Crear nuevo</a>
+</div>
+
 {% endblock %}
