--- a/templates/usuario/new.html.twig
+++ b/templates/usuario/new.html.twig
@@ -3,9 +3,11 @@
 {% block title %}New Usuario{% endblock %}
 
 {% block body %}
-    <h1>Create new Usuario</h1>
-
-    {{ include('usuario/_form.html.twig') }}
-
-    <a href="{{ path('app_usuario_index') }}">back to list</a>
+    <div class="container mx-auto mt-8">
+        <div class="bg-gray-100 p-6 rounded-md max-w-md mx-auto">
+            <h1 class="text-2xl font-bold ">Formulario de Usuario</h1>
+            {{ include('usuario/_form.html.twig') }}
+            <a href="{{ path('app_usuario_index') }}" class="block mt-4 text-blue-500 hover:underline">Volver a la lista</a>
+        </div>
+    </div>
 {% endblock %}
