--- a/templates/usuario/_delete_form.html.twig
+++ b/templates/usuario/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_usuario_delete', {'id': usuario.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('app_usuario_delete', {'id': usuario.id}) }}" onsubmit="return confirm('¿Estás seguro de eliminar este elemento?');" class="mt-4">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ usuario.id) }}">
-    <button class="btn">Delete</button>
+    <button type="submit" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded">Eliminar</button>
 </form>
