--- a/templates/usuario/show.html.twig
+++ b/templates/usuario/show.html.twig
@@ -1,38 +1,38 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Usuario{% endblock %}
+{% block title %}Detalle del Usuario{% endblock %}
 
 {% block body %}
-    <h1>Usuario</h1>
+    <div class="container mx-auto mt-8">
+        <h1 class="text-2xl font-bold mb-4">Detalle del Usuario</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ usuario.id }}</td>
-            </tr>
-            <tr>
-                <th>Nombres</th>
-                <td>{{ usuario.nombres }}</td>
-            </tr>
-            <tr>
-                <th>Apellidos</th>
-                <td>{{ usuario.apellidos }}</td>
-            </tr>
-            <tr>
-                <th>Password</th>
-                <td>{{ usuario.password }}</td>
-            </tr>
-            <tr>
-                <th>Email</th>
-                <td>{{ usuario.email }}</td>
-            </tr>
-        </tbody>
-    </table>
+        <div class="overflow-x-auto">
+            <table class="table-auto w-full border-collapse">
+                <tbody>
+                    <tr class="bg-gray-100">
+                        <th class="border p-2">Nombres</th>
+                        <td class="border p-2">{{ usuario.nombres }}</td>
+                    </tr>
+                    <tr class="bg-gray-200">
+                        <th class="border p-2">Apellidos</th>
+                        <td class="border p-2">{{ usuario.apellidos }}</td>
+                    </tr>
+                    <tr class="bg-gray-100">
+                        <th class="border p-2">Password</th>
+                        <td class="border p-2">{{ usuario.password }}</td>
+                    </tr>
+                    <tr class="bg-gray-200">
+                        <th class="border p-2">Email</th>
+                        <td class="border p-2">{{ usuario.email }}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
 
-    <a href="{{ path('app_usuario_index') }}">back to list</a>
+        <a href="{{ path('app_usuario_index') }}" class="inline-block mt-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Volver a la lista</a>
 
-    <a href="{{ path('app_usuario_edit', {'id': usuario.id}) }}">edit</a>
+        <a href="{{ path('app_usuario_edit', {'id': usuario.id}) }}" class="inline-block mt-4 bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded ml-2">Editar</a>
 
-    {{ include('usuario/_delete_form.html.twig') }}
+        {{ include('usuario/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
