--- a/templates/usuario/edit.html.twig
+++ b/templates/usuario/edit.html.twig
@@ -1,13 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Usuario{% endblock %}
+{% block title %}Editar Usuario{% endblock %}
 
 {% block body %}
-    <h1>Edit Usuario</h1>
+    
 
-    {{ include('usuario/_form.html.twig', {'button_label': 'Update'}) }}
+    <div class="container mx-auto mt-8">
+        <div class="bg-gray-100 p-6 rounded-md max-w-md mx-auto">
+            <h1 class="text-2xl font-bold mb-4">Editar Usuario</h1>
 
-    <a href="{{ path('app_usuario_index') }}">back to list</a>
-
-    {{ include('usuario/_delete_form.html.twig') }}
+            {{ include('usuario/_form.html.twig', {'button_label': 'Update'}) }}
+    
+            <a href="{{ path('app_usuario_index') }}" class="inline-block mt-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Volver a la lista</a>
+    
+            {{ include('usuario/_delete_form.html.twig') }}
+        </div>
+    </div>
 {% endblock %}
